--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,7 @@
       content="width=device-width, initial-scale=1.0"/>
     <title>CPS — Ремонт техники</title>
     <meta name="description" content="Сервисный центр CPS — ремонт техники разных брендов." />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css" />
   </head>
 
   <body>
